--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ h2 {
 /*=============== HOME ===============*/
 .home-container {
   padding: 0 15px;
-  width: 1636px;
+  max-width: 1636px;
   margin: 0 auto;
 }
 
@@ -176,7 +176,7 @@ h2 {
 .home-text {
   padding: 31px 0;
   margin-left: 26px;
-  width: 632px;
+  max-width: 632px;
 }
 .home-content {
   padding: 117px 16px 0 0;
@@ -192,7 +192,7 @@ h2 {
 /*=============== CHOOSE ===============*/
 .choose-container {
   padding: 0 15px;
-  width: 1732px;
+  max-width: 1732px;
   margin: 0 auto;
 }
 
@@ -201,7 +201,7 @@ h2 {
 }
 .choose h2.title {
   margin-left: 64px;
-  width: 528px;
+  max-width: 528px;
 }
 
 .choose-cards {
@@ -213,8 +213,8 @@ h2 {
 }
 
 .choose-cards-item {
-  width: 528px;
-  height: 528px;
+  max-width: 528px;
+  max-height: 528px;
   padding: 60px;
   border-radius: 30px;
 }
@@ -252,7 +252,7 @@ h2 {
 /*=============== ABOUT ===============*/
 .about-container {
   padding: 0 15px;
-  width: 1654px;
+  max-width: 1654px;
   margin: 0 auto;
 }
 
@@ -261,7 +261,7 @@ h2 {
 }
 .about h2.title {
   margin-left: 25px;
-  width: 528px;
+  max-width: 528px;
 }
 
 .about-content {
@@ -272,7 +272,7 @@ h2 {
 }
 
 .about-text {
-  width: 846px;
+  max-width: 846px;
   padding-top: 84px;
   font-size: 32px;
   font-weight: 400;
@@ -289,7 +289,7 @@ h2 {
 /*=============== SERVICES ===============*/
 .services-container {
   padding: 0 15px;
-  width: 1670px;
+  max-width: 1670px;
   margin: 0 auto;
 }
 
@@ -298,7 +298,7 @@ h2 {
 }
 .services h2.title {
   margin-left: 33px;
-  width: 328px;
+  max-width: 328px;
 }
 
 .services-cards {
@@ -311,8 +311,8 @@ h2 {
 
 .services-cards-item {
   position: relative;
-  width: 521px;
-  height: 653px;
+  max-width: 521px;
+  max-height: 653px;
   padding: 51px 33px;
   border-radius: 30px;
   background-color: #93dfcd;
@@ -335,12 +335,12 @@ h2 {
 }
 
 .item-text-1 {
-  width: 313px;
+  max-width: 313px;
   margin-top: 87px;
 }
 
 .item-text-2 {
-  width: 462px;
+  max-width: 462px;
 }
 
 /*=============== FILTER ===============*/
@@ -350,7 +350,7 @@ h2 {
 
 .filter-container {
   padding: 0 15px;
-  width: 1604px;
+  max-width: 1604px;
   margin: 0 auto;
 }
 
@@ -358,7 +358,7 @@ h2 {
   padding: 171px 0 0;
 }
 .filter h2.title {
-  width: 375px;
+  max-width: 375px;
 }
 
 .filter-categorys {
@@ -451,7 +451,7 @@ h2 {
 /*=============== SCHEDULE ===============*/
 .schedule-container {
   padding: 0 15px;
-  width: 1616px;
+  max-width: 1616px;
   margin: 0 auto;
 }
 
@@ -475,6 +475,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1586px;
   padding-bottom: 110px;
 }
 
@@ -497,7 +498,6 @@ h2 {
 
 .day,
 .num {
-  display: inline-block;
   width: 200px;
   text-align: center;
 }
@@ -551,7 +551,7 @@ h2 {
 /*=============== CLIENTS ===============*/
 .clients-container {
   padding: 0 15px;
-  width: 1616px;
+  max-width: 1616px;
   margin: 0 auto;
 }
 
@@ -564,7 +564,7 @@ h2 {
 
 .clients-img {
   width: 1476px;
-  height: 1240px;
+  height: auto;
   margin: 166px 0 104px 167px;
 }
 
@@ -575,7 +575,7 @@ h2 {
 
 .fqa-container {
   padding: 0 15px;
-  width: 1616px;
+  max-width: 1616px;
   margin: 0 auto;
 }
 
@@ -602,14 +602,14 @@ h2 {
   padding-right: 213px;
 }
 .fqa-cards-item:nth-child(2) {
-  width: 1324px;
+  max-width: 1324px;
   padding-right: 50px;
 }
 .fqa-cards-item:nth-child(3) {
   padding-right: 50px;
 }
 .fqa-cards-item:nth-child(4) {
-  width: 1205px;
+  max-width: 1205px;
   padding-right: 50px;
 }
 .fqa-cards-item .item-title {
@@ -636,7 +636,7 @@ h2 {
 /*=============== CONTACTS ===============*/
 .contacts-container {
   padding: 0 15px;
-  width: 1604px;
+  max-width: 1604px;
   margin: 0 auto;
 }
 
