--- a/style/style.scss
+++ b/style/style.scss
@@ -40,7 +40,7 @@ h2 {
 
 .nav-container {
   padding: 0 15px;
-  width: 1498px;
+  max-width: 1498px;
   margin: 0 auto;
 }
 
@@ -109,7 +109,7 @@ h2 {
 
 .choose-cards-item {
   max-width: 528px;
-  max-height: 528px;
+  max-height: auto;
   padding: 60px;
   border-radius: $general-radius;
 
@@ -208,7 +208,7 @@ h2 {
 .services-cards-item {
   position: relative;
   max-width: 521px;
-  max-height: 653px;
+  max-height: auto;
   padding: 51px 33px;
   border-radius: $general-radius;
   background-color: #93dfcd;
