--- a/css/style.css
+++ b/css/style.css
@@ -622,9 +622,7 @@ h2 {
 }
 
 .fqa-circle-1 {
-  position: absolute;
-  left: 0;
-  top: 302px;
+  display: none;
 }
 
 .fqa-circle-2 {
@@ -878,78 +876,121 @@ h2 {
     width: auto;
     bottom: -19px;
   }
-}
-/*---------- SCHEDULE ----------*/
-.schedule {
-  padding: 43px 0 47px;
-}
-.schedule h2.title {
-  width: 86px;
-  margin: 0;
-}
-
-.schedule-calendar {
-  margin-top: 39px;
-  padding-bottom: 0;
-}
-
-.calendar {
-  padding-bottom: 25px;
-}
-
-.days-list,
-.nums-list {
-  -moz-column-gap: 7px;
-       column-gap: 7px;
-}
-
-.nums-list {
-  margin-bottom: 19px;
-}
-
-.day,
-.num {
-  width: 46px;
-}
-
-.day {
-  padding-bottom: 0;
-  font-size: 10px;
-}
-
-.num {
-  padding-top: 8px;
-  font-size: 12px;
-}
-
-.calendar-rows {
-  row-gap: 5px;
-}
-
-.row-item {
-  -moz-column-gap: 7px;
-       column-gap: 7px;
-}
-.row-item .btn .btn-name {
-  font-size: 8px;
-}
-
-.row-item .btn {
-  width: 46px;
-  height: 15px;
-  border-radius: 3px;
-}
-
-/*---------- CLIENTS ----------*/
-.clients h2.title {
-  width: 300px;
-}
-
-.clients-img {
-  margin: 0;
-}
-
-/*---------- CONTACTS ----------*/
-.contacts-container {
-  display: none;
+  /*---------- SCHEDULE ----------*/
+  .schedule {
+    padding: 43px 0 47px;
+  }
+  .schedule h2.title {
+    width: 86px;
+    margin: 0;
+  }
+  .schedule-calendar {
+    margin-top: 39px;
+    padding-bottom: 0;
+  }
+  .calendar {
+    padding-bottom: 25px;
+  }
+  .days-list,
+  .nums-list {
+    -moz-column-gap: 7px;
+         column-gap: 7px;
+  }
+  .nums-list {
+    margin-bottom: 19px;
+  }
+  .day,
+  .num {
+    width: 46px;
+  }
+  .day {
+    padding-bottom: 0;
+    font-size: 10px;
+  }
+  .num {
+    padding-top: 8px;
+    font-size: 12px;
+  }
+  .calendar-rows {
+    row-gap: 5px;
+  }
+  .row-item {
+    -moz-column-gap: 7px;
+         column-gap: 7px;
+  }
+  .row-item .btn .btn-name {
+    font-size: 8px;
+  }
+  .row-item .btn {
+    width: 46px;
+    height: 15px;
+    border-radius: 3px;
+  }
+  /*---------- CLIENTS ----------*/
+  .clients {
+    padding: 17px 0 37px;
+  }
+  .clients h2.title {
+    width: 123px;
+  }
+  .clients-img {
+    width: 322px;
+    margin: 30px 20px 0 31px;
+  }
+  /*=============== FQA ===============*/
+  .fqa {
+    padding: 47px 0 46px;
+  }
+  .fqa h2.title {
+    width: 163px;
+  }
+  .fqa-cards {
+    row-gap: 15px;
+    margin: 30px -8px 0;
+  }
+  .fqa-cards-item {
+    padding: 9px 14px;
+    border-radius: 14px;
+  }
+  .fqa-cards-item:nth-child(1) {
+    padding-right: 27px;
+  }
+  .fqa-cards-item:nth-child(2) {
+    padding-right: 23px;
+  }
+  .fqa-cards-item:nth-child(3) {
+    padding-right: 14px;
+  }
+  .fqa-cards-item:nth-child(4) {
+    padding-right: 22px;
+  }
+  .fqa-cards-item .item-title {
+    font-size: 10px;
+    margin-bottom: 7px;
+  }
+  .fqa-cards-item .item-text {
+    font-size: 10px;
+    padding-left: 9px;
+  }
+  .fqa-circle-1 {
+    display: none;
+  }
+  .fqa-circle-2 {
+    width: 50px;
+    height: 50px;
+    right: 12px;
+    bottom: -25px;
+  }
+  /*---------- CONTACTS ----------*/
+  .contacts {
+    padding: 45px 0 32px;
+  }
+  .contacts h2.title {
+    width: 114px;
+  }
+  .socials-group {
+    -moz-column-gap: 11px;
+         column-gap: 11px;
+    margin-top: 32px;
+  }
 }/*# sourceMappingURL=style.css.map */
