--- a/style/style.scss
+++ b/style/style.scss
@@ -515,9 +515,7 @@ h2 {
 }
 
 .fqa-circle-1 {
-  position: absolute;
-  left: 0;
-  top: 302px;
+  display: none;
 }
 
 .fqa-circle-2 {
@@ -804,80 +802,140 @@ h2 {
     width: auto;
     bottom: -19px;
   }
-}
 
-/*---------- SCHEDULE ----------*/
+  /*---------- SCHEDULE ----------*/
 
-.schedule {
-  padding: 43px 0 47px;
-  h2.title {
-    width: 86px;
-    margin: 0;
+  .schedule {
+    padding: 43px 0 47px;
+    h2.title {
+      width: 86px;
+      margin: 0;
+    }
   }
-}
 
-.schedule-calendar {
-  margin-top: 39px;
-  padding-bottom: 0;
-}
-
-.calendar {
-  padding-bottom: 25px;
-}
-
-.days-list,
-.nums-list {
-  column-gap: 7px;
-}
-
-.nums-list {
-  margin-bottom: 19px;
-}
-
-.day,
-.num {
-  width: 46px;
-}
-
-.day {
-  padding-bottom: 0;
-  font-size: 10px;
-}
-
-.num {
-  padding-top: 8px;
-  font-size: 12px;
-}
-
-.calendar-rows {
-  row-gap: 5px;
-}
-
-.row-item {
-  column-gap: 7px;
-  .btn .btn-name {
-    font-size: 8px;
+  .schedule-calendar {
+    margin-top: 39px;
+    padding-bottom: 0;
   }
-}
 
-.row-item .btn {
-  width: 46px;
-  height: 15px;
-  border-radius: 3px;
-}
-
-/*---------- CLIENTS ----------*/
-.clients {
-  h2.title {
-    width: 300px;
+  .calendar {
+    padding-bottom: 25px;
   }
-}
 
-.clients-img {
-  margin: 0;
-}
+  .days-list,
+  .nums-list {
+    column-gap: 7px;
+  }
 
-/*---------- CONTACTS ----------*/
-.contacts-container {
-  display: none;
+  .nums-list {
+    margin-bottom: 19px;
+  }
+
+  .day,
+  .num {
+    width: 46px;
+  }
+
+  .day {
+    padding-bottom: 0;
+    font-size: 10px;
+  }
+
+  .num {
+    padding-top: 8px;
+    font-size: 12px;
+  }
+
+  .calendar-rows {
+    row-gap: 5px;
+  }
+
+  .row-item {
+    column-gap: 7px;
+    .btn .btn-name {
+      font-size: 8px;
+    }
+  }
+
+  .row-item .btn {
+    width: 46px;
+    height: 15px;
+    border-radius: 3px;
+  }
+
+  /*---------- CLIENTS ----------*/
+  .clients {
+    padding: 17px 0 37px;
+    h2.title {
+      width: 123px;
+    }
+  }
+
+  .clients-img {
+    width: 322px;
+    margin: 30px 20px 0 31px;
+  }
+
+  /*=============== FQA ===============*/
+  .fqa {
+    padding: 47px 0 46px;
+    h2.title {
+      width: 163px;
+    }
+  }
+
+  .fqa-cards {
+    row-gap: 15px;
+    margin: 30px -8px 0;
+  }
+
+  .fqa-cards-item {
+    padding: 9px 14px;
+    border-radius: 14px;
+    &:nth-child(1) {
+      padding-right: 27px;
+    }
+    &:nth-child(2) {
+      padding-right: 23px;
+    }
+    &:nth-child(3) {
+      padding-right: 14px;
+    }
+    &:nth-child(4) {
+      padding-right: 22px;
+    }
+
+    .item-title {
+      font-size: 10px;
+      margin-bottom: 7px;
+    }
+    .item-text {
+      font-size: 10px;
+      padding-left: 9px;
+    }
+  }
+
+  .fqa-circle-1 {
+    display: none;
+  }
+
+  .fqa-circle-2 {
+    width: 50px;
+    height: 50px;
+    right: 12px;
+    bottom: -25px;
+  }
+
+  /*---------- CONTACTS ----------*/
+  .contacts {
+    padding: 45px 0 32px;
+    h2.title {
+      width: 114px;
+    }
+  }
+
+  .socials-group {
+    column-gap: 11px;
+    margin-top: 32px;
+  }
 }
