--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,9 @@ h2 {
   max-width: 1586px;
   padding-bottom: 110px;
 }
+.calendar.blur {
+  filter: blur(7.5px);
+}
 
 .days-list,
 .nums-list {
@@ -622,7 +625,9 @@ h2 {
 }
 
 .fqa-circle-1 {
-  display: none;
+  position: absolute;
+  left: 0;
+  top: 302px;
 }
 
 .fqa-circle-2 {
